--- a/TestOperator/config/samples/rag_v1alpha1_documents.yaml
+++ b/TestOperator/config/samples/rag_v1alpha1_documents.yaml
@@ -7,3 +7,7 @@ metadata:
   name: documents-sample
 spec:
   # TODO(user): Add fields here
+  repo: "Operator"
+  branch: "main"
+  filePath: "README.md"
+  intervalSeconds: 10
